# ariac_ros2

./: .gitignore  CMakeLists.txt  README.md  notesForNist.txt  package.xml  setup.cfg  setup.py
ariac_description/: CMakeLists.txt
ariac_description/config/: agv1_controllers.yaml  agv2_controllers.yaml  agv3_controllers.yaml  agv4_controllers.yaml  agv_controllers.yaml  assembly_robot_controllers.yaml  ceiling_robot_controllers.yaml  diffbot_controllers.yaml  floor_robot_controllers.yaml  kitting_robot_controllers.yaml  robot_controllers.yaml
ariac_description/launch/: agv_bringup.launch.py  agv_bringup2.launch.py  assembly_robot_gazebo.launch.py  both_robots_gazebo.launch.py  ceiling_robot_bringup.launch.py  diffbot.launch.py  floor_robot_bringup.launch.py  kitting_robot_gazebo.launch.py  robot_controllers.launch.py  view_assembly_robot.launch.py  view_kitting_robot.launch.py
ariac_description/urdf/: assembly_robot.urdf.xacro  ceiling_robot.urdf.xacro  floor_robot.urdf.xacro  gantry.ros2_control.xacro  gantry_macro.xacro  kitting_robot.urdf.xacro  linear_actuator_macro.xacro
ariac_gazebo/: CMakeLists.txt  package.xml
ariac_gazebo/ariac_gazebo/: controller_spawner.py  conveyor_belt_populator.py  environment_startup.py  gazebo_robot_spawner.py  gazebo_sensor_spawner.py  robot_navigator.py  spawn_params.py  tf_broadcaster.py  utilities.py
ariac_gazebo/config/: bin_poses.yaml  object_poses.yaml  sample.yaml  sensors.rviz  sensors.yaml  trays.yaml
ariac_gazebo/launch/: ariac.launch.py
ariac_gazebo/nodes/: bins_tf_broadcaster.py  environment_startup_node.py  human_gazebo_spawner.py  map_odom_broadcaster.py  nav_to_pose.py  navigation_frame_broadcaster.py  (+9 more)
ariac_gazebo_ros2_control/: CMakeLists.txt  package.xml
ariac_gazebo_ros2_control/include/ariac_gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp
ariac_gazebo_ros2_control/src/: gazebo_ros2_control_plugin.cpp
ariac_hardware/: CMakeLists.txt  ariac_hardware.xml  package.xml
ariac_human/: CMakeLists.txt  package.xml
ariac_human/config/: human_params.yaml
ariac_human/launch/: gantrymovetests.py  human.launch.py  human_listener.py  human_listenerLB.py  localization.launch.py  movebase_server.bkp  movebase_server.py  navigation.launch.py  navigation2.launch.py  navigation_bringup.launch.py  robot_state_publisher.launch.py  slam.launch.py  spawn_human.launch.py  start_navigation.launch.py  start_slam.launch.py  stopbase_server.py
ariac_human/models/human/: model.sdf
ariac_human/rviz/: navigation.rviz  slam.rviz
ariac_human/urdf/: human.urdf.xacro
ariac_mobile_robot/: CMakeLists.txt
ariac_moveit_config/: CMakeLists.txt  package.xml
ariac_msgs/: CMakeLists.txt  package.xml
ariac_msgs/msg/: AGVStatus.msg  AssemblyTask.msg  Challenge.msg  CompetitionState.msg  Condition.msg  DroppedPartChallenge.msg  FaultyPartChallenge.msg  KittingTask.msg  LogicalCameraImage.msg  Model.msg  Order.msg  Part.msg  PartLot.msg  PartPlaceCondition.msg  QualityIssue.msg  RobotMalfunctionChallenge.msg  SensorBlackoutChallenge.msg  Sensors.msg  Snapshot.msg  TimedFloat.msg  TimedPose.msg  Trial.msg  VacuumGripperState.msg
ariac_msgs/srv/: MoveAGV.srv  PerformQualityCheck.srv  TeleportHuman.srv
ariac_plugins/: CMakeLists.txt  package.xml
ariac_plugins/include/ariac_plugins/: agv_plugin.hpp  ariac_common.hpp  conveyor_belt_plugin.hpp  gripper_change_plugin.hpp  human_teleport_plugin.hpp  task_manager_plugin.hpp  vacuum_gripper.hpp
ariac_plugins/src/: agv_plugin.cpp  agv_tray_plugin.cpp  assembly_lock_plugin.cpp  conveyor_belt_plugin.cpp  disable_shadows_plugin.cpp  gripper_change_plugin.cpp  human_teleport_plugin.cpp  object_disposal_plugin.cpp  task_manager_plugin.cpp  vacuum_gripper.cpp  vacuum_gripper_plugin.cpp
ariac_ros2/: gear.py  pub.py
ariac_sensors/: CMakeLists.txt  package.xml
ariac_sensors/include/ariac_sensors/: ariac_camera_plugin.hpp  break_beam_sensor.hpp  gazebo_ros_break_beam_sensor.hpp  gazebo_ros_logical_camera.hpp  logical_camera.hpp  quality_control_plugin.hpp
ariac_sensors/models/advanced_logical_camera/: model.sdf
ariac_sensors/models/agv_tray_sensor/: model.sdf
ariac_sensors/models/assembly_station_sensor/: model.sdf
ariac_sensors/models/basic_logical_camera/: model.sdf
ariac_sensors/models/break_beam/: model.sdf
ariac_sensors/models/depth_camera/: model.config  model.sdf
ariac_sensors/models/laser_profiler/: model.sdf
ariac_sensors/models/lidar/: model.sdf
ariac_sensors/models/logical_camera/: model.config  model.sdf
ariac_sensors/models/proximity/: model.sdf
ariac_sensors/models/proximity_sensor/: model.sdf
ariac_sensors/models/quality_control/: model.config  model.sdf
ariac_sensors/models/rgb_camera/: model.sdf
ariac_sensors/models/rgbd_camera/: model.sdf
ariac_sensors/src/: agv_tray_sensor_plugin.cpp  ariac_camera_plugin.cpp  ariac_logical_camera_plugin.cpp  ariac_ray_plugin.cpp  assembly_station_sensor_plugin.cpp  break_beam_sensor.cpp  gazebo_ros_break_beam_sensor.cpp  gazebo_ros_logical_camera.cpp  logical_camera.cpp  quality_control_plugin.cpp
config/: diff_drive_controller_velocity.yaml  gantry_initial_positions.yaml  view_gantry.rviz
docs/: conf.py  index.rst
human_control/: build-gradle.runLocal  build.gradle  human_control.mas2j  log.txt  logging.properties
launch/: ariac.launch.py  gantry_gazebo.launch.py  gazebo.launch.py  gazebo_ariac.launch.py  gazebo_classic.launch.py  view_gantry.launch.py
src/: cpp_node.cpp
test_competitor/: CMakeLists.txt  package.xml
test_competitor/include/test_competitor/: test_competitor.hpp
test_competitor/launch/: gripper_change.launch.py  kitting_task.launch.py  moveit_test.launch.py  pick_test.launch.py  test.launch.py
test_competitor/meshes/: bin.stl
test_competitor/nodes/: pick_part.py
test_competitor/rviz/: moveit_test.rviz  pick_test.rviz
test_competitor/src/: competitor.cpp  gripper_change.cpp  kitting_task.cpp  moveit_test.cpp  pick_test.cpp  test_competitor.cpp
test_competitor/test_competitor/: floor_robot_commander.py
urdf/: test_diff_drive.xacro.urdf
worlds/: ariac.world
(+109 files in other folders)
